kubernetes/apps/networking/newt/newt/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-newt
  labels:
    app: k8s-newt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-newt
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: newt
        app: k8s-newt
    spec:
      containers:
        - name: k8s-newt
          image: harbor.cloud.traunseenet.com/docker.io/fosrl/newt:1.18.1@sha256:7fed6605e0a104a337e1cb903bbb1225f80c7f6e5e56ff1eb1d70c57740d8e0f
          args:
            - --blueprint-file
            - /etc/newt/blueprint.yaml
          volumeMounts:
            - name: blueprint
              mountPath: /etc/newt/blueprint.yaml
              subPath: blueprint.yaml
              readOnly: true
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
          imagePullPolicy: IfNotPresent
      volumes:
        - name: blueprint
          secret:
            secretName: k8s-newt-blueprint
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-newt
  labels:
    app: homelab-newt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homelab-newt
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: newt
        app: homelab-newt
    spec:
      containers:
        - name: homelab-newt
          image: harbor.cloud.traunseenet.com/docker.io/fosrl/newt:1.18.1@sha256:7fed6605e0a104a337e1cb903bbb1225f80c7f6e5e56ff1eb1d70c57740d8e0f
          args:
            - --blueprint-file
            - /etc/newt/blueprint.yaml
          volumeMounts:
            - name: blueprint
              mountPath: /etc/newt/blueprint.yaml
              subPath: blueprint.yaml
              readOnly: true
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
          imagePullPolicy: IfNotPresent
      volumes:
        - name: blueprint
          secret:
            secretName: homelab-newt-blueprint
