kubernetes/apps/networking/newt/newt/app/k8sNetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: k8s-newt-egress-policy
spec:
  podSelector:
    matchLabels:
      app: k8s-newt
  policyTypes:
    - Egress
  egress:
    # Allow access to traefik lb
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8443
        - protocol: TCP
          port: 443
    # Allow access to apps namespace
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: apps
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: pocketid
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app: grafana
    # Allow access to harbor
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: storage
          podSelector:
            matchLabels:
              app: harbor
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 80
    # Allow access to gitea
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: storage
          podSelector:
            matchLabels:
              app: gitea
      ports:
        - protocol: TCP
          port: 3000
    # Allow access to pangolin https & udp ports
    - to:
        - ipBlock:
            cidr: 178.105.32.92/32
      ports:
        - protocol: TCP
          port: 443
        - protocol: UDP
          port: 51820
        - protocol: UDP
          port: 21820
    # Allow kube-dns
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
